--- a/moove/web/src/main/resources/locale/messages.properties
+++ b/moove/web/src/main/resources/locale/messages.properties
@@ -28,3 +28,7 @@ create.user.error.email.already.exists=The email {0} is already registered.
 user.password.does.not.match=The password informed does not match.
 cannot.reset.your.own.password=Cannot reset your own password.
 forbidden=Forbidden
+internal.server.error=An unexpected error occurred and we're working to fix the problem.
+invalid.registry.configuration=INVALID_REGISTRY_CONFIGURATION_MSG
+invalid.registry.connection=INVALID_REGISTRY_CONNECTION_MESSAGE
+villager.integration.error=VILLAGER_INTEGRATION_ERROR_MESSAGE
