adding final messages registry connectivity
Signed-off-by: barbararochazup <barbara.rocha@zup.com.br>

--- a/moove/web/src/main/resources/locale/messages.properties
+++ b/moove/web/src/main/resources/locale/messages.properties
@@ -29,6 +29,6 @@ user.password.does.not.match=The password informed does not match.
 cannot.reset.your.own.password=Cannot reset your own password.
 forbidden=Forbidden
 internal.server.error=An unexpected error occurred and we're working to fix the problem.
-invalid.registry.configuration=INVALID_REGISTRY_CONFIGURATION_MSG
-invalid.registry.connection=INVALID_REGISTRY_CONNECTION_MESSAGE
-villager.integration.error=VILLAGER_INTEGRATION_ERROR_MESSAGE
+invalid.registry.configuration=Connection failed. Check if the configuration information is correct and try again
+invalid.registry.connection=This connection is unavailable. Check if the configuration information is correct or register a new configuration.
+villager.integration.error=Not possible test the registry connection. Try again.
