--- a/moove/web/src/main/resources/locale/messages_pt_BR.properties
+++ b/moove/web/src/main/resources/locale/messages_pt_BR.properties
@@ -28,3 +28,7 @@ user.password.does.not.match=A senha informada está incorreta.
 cannot.reset.your.own.password=Não é permitido resetar a própria senha.
 forbidden=Acesso Negado
 internal.server.error=Um erro inesperado ocorreu e nós estamos trabalhando para resolver ele.
+invalid.registry.configuration=Conexão falhou. Verifique se a configuração informada está correta e tente novamente.
+invalid.registry.connection=Conexão indisponível. Verifique se a configuração informada está correta ou cadastre uma nova configuração.
+villager.integration.error=Não foi possível testar a conexão. Tente novamente.
+
