refactoring gct test registry connection code

--- a/moove/web/src/main/resources/locale/messages_pt_BR.properties
+++ b/moove/web/src/main/resources/locale/messages_pt_BR.properties
@@ -31,4 +31,7 @@ internal.server.error=Um erro inesperado ocorreu e nós estamos trabalhando para
 invalid.registry.configuration=Conexão falhou. Verifique se a configuração informada está correta e tente novamente.
 invalid.registry.connection=Conexão indisponível. Verifique se a configuração informada está correta ou cadastre uma nova configuração.
 villager.integration.error=Não foi possível testar a conexão. Tente novamente.
+registry.integration.error=Conexão com a API do Registry falhou. Não é possível testar a conexão com o registry. Verifique se a API do Registry está disponivel.
+villager.registry.integration.error=Conexão com o Villager falhou. Não é possível testar a conexão com o registry. Verifique se o Villager está disponivel.
+villager.unexpected.error=Um erro inesperado ocorreu e nós estamos trabalhando para resolver ele.
 
