--- a/moove/web/src/main/resources/locale/messages.properties
+++ b/moove/web/src/main/resources/locale/messages.properties
@@ -19,7 +19,7 @@ invalid.authorization=Failed on token authorization.
 move.build.invalid.column=Invalid column to move build.
 git.credentials.not.found=Git credentials not found.
 delete.deployed.build=Build can not be deleted, because it is already deployed in a circle.
-deploymet.active= There is an active deployment for the circle you want to delete
+deploymet.active= There is an active deployment for the circle you want to delete.
 user.group.already.associated=This user group is already associated to this workspace.
 user.group.already.disassociated=This user group is already disassociated from this workspace.
 user.already.associated=This user is already associated to this user group.
@@ -27,4 +27,5 @@ user.already.disassociated=This user is already disassociated from this user gro
 create.user.error.email.already.exists=The email {0} is already registered.
 user.password.does.not.match=The password informed does not match.
 cannot.reset.your.own.password=Cannot reset your own password.
-forbidden=Forbidden
+forbidden=Forbidden.
+invalid.circle.matcher.url.error=Invalid circle matcher url.
