--- a/moove/web/src/main/resources/locale/messages.properties
+++ b/moove/web/src/main/resources/locale/messages.properties
@@ -28,3 +28,4 @@ create.user.error.email.already.exists=The email {0} is already registered.
 user.password.does.not.match=The password informed does not match.
 cannot.reset.your.own.password=Cannot reset your own password.
 forbidden=Forbidden
+missing.parameter=Missing parameter {0}.
