--- a/moove/web/src/main/resources/locale/messages_pt_BR.properties
+++ b/moove/web/src/main/resources/locale/messages_pt_BR.properties
@@ -27,4 +27,4 @@ create.user.error.email.already.exists=O email {0} já está registrado.
 user.password.does.not.match=A senha informada está incorreta.
 cannot.reset.your.own.password=Não é permitido resetar a própria senha.
 forbidden=Acesso Negado
-missing.parameter=Parâmetro inválido {0}.
+missing.parameter=Parâmetro ausente {0}.
