--- a/moove/web/src/main/resources/locale/messages_pt_BR.properties
+++ b/moove/web/src/main/resources/locale/messages_pt_BR.properties
@@ -27,5 +27,5 @@ create.user.error.email.already.exists=O email {0} já está registrado.
 user.password.does.not.match=A senha informada está incorreta.
 cannot.reset.your.own.password=Não é permitido resetar a própria senha.
 forbidden=Acesso Negado
-external.idm.forbidden=Não é possivel executar a ação pois IDM externo esta habilitado.
+external.idm.forbidden=Não é possível executar a ação, pois o IDM externo está habilitado.
 missing.parameter=Parâmetro ausente {0}.
