Remove comments and using kc messages
Signed-off-by: Felipe Brunelli de Andrade <felipe.andrade@zup.com.br>

--- a/keycloak/base-charles/login/messages/messages_en.properties
+++ b/keycloak/base-charles/login/messages/messages_en.properties
@@ -369,3 +369,5 @@ webauthn-error-user-not-found=Unknown user authenticated by the Security key.
 
 identity-provider-redirector=Connect with another Identity Provider
 
+loginUsername=Enter your username or e-mail
+loginPassword=Enter your password
