blocking Default Circle delete
Signed-off-by: pedroborgeszup <pedro.borges@zup.com.br>

--- a/moove/web/src/main/resources/locale/messages.properties
+++ b/moove/web/src/main/resources/locale/messages.properties
@@ -20,6 +20,7 @@ move.build.invalid.column=Invalid column to move build.
 git.credentials.not.found=Git credentials not found.
 delete.deployed.build=Build can not be deleted, because it is already deployed in a circle.
 deploymet.active= There is an active deployment for the circle you want to delete
+cannot.delete.default.circle=Default circle cannot be deleted.
 user.group.already.associated=This user group is already associated to this workspace.
 user.group.already.disassociated=This user group is already disassociated from this workspace.
 user.already.associated=This user is already associated to this user group.
