--- a/moove/web/src/main/resources/locale/messages_pt_BR.properties
+++ b/moove/web/src/main/resources/locale/messages_pt_BR.properties
@@ -18,9 +18,8 @@ invalid.authorization=Falha no token de autorização.
 move.build.invalid.column=Falha ao mover o build para a coluna (coluna inválida).
 git.credentials.not.found=Credenciais git não encontradas.
 delete.deployed.build=O build não pode ser deletado pois está presente em um círculo.
-deployment.active=Existe um deployment ativo para o círculo que deseja apagar
+circle.deployment.active=Este círculo possui uma implantação ativa.
 cannot.delete.default.circle=Circulo Default não pode ser deletado.
-circle.deployment.active=Existe um deployment ativo para o círculo que deseja apagar.
 user.group.already.associated=Este grupo de usuarios ja esta associado a este workspace.
 user.group.already.disassociated=Este grupo de usuarios ja esta desassociado deste workspace.
 user.already.associated=Este usuário ja esta associado a este grupo.
