changing unexpect error message
Signed-off-by: barbararochazup <barbara.rocha@zup.com.br>

--- a/moove/web/src/main/resources/locale/messages.properties
+++ b/moove/web/src/main/resources/locale/messages.properties
@@ -37,7 +37,7 @@ invalid.registry.connection=This connection is unavailable. Check if the configu
 registry.integration.error=Connection Registry API failed. Not possible test the registry connection. Verify if Registry API is available.
 registry.general.error=Not possible test the registry connection. Try again.
 villager.registry.integration.error=Connection Villager failed. Not possible test the registry connection. Verify if Villager is available.
-villager.unexpected.error=An unexpected error occurred and we're working to fix the problem.
+villager.unexpected.error=An unexpected error occurred.
 
 
 
