--- a/moove/web/src/main/resources/locale/messages_pt_BR.properties
+++ b/moove/web/src/main/resources/locale/messages_pt_BR.properties
@@ -38,4 +38,4 @@ villager.integration.error=Não foi possível testar a conexão. Tente novamente
 registry.integration.error=Conexão com a API do Registry falhou. Não é possível testar a conexão com o registry. Verifique se a API do Registry está disponivel.
 villager.registry.integration.error=Conexão com o Villager falhou. Não é possível testar a conexão com o registry. Verifique se o Villager está disponivel.
 villager.unexpected.error=Um erro inesperado ocorreu.
-
+external.idm.error=Um erro inesperado ocorreu ao tentar acessar o seu identity manager.
